--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-    "name": "full-stack-redux",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
-        "test:watch": "npm run test -- --watch"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "devDependencies": {
-        "babel-cli": "^6.5.1",
-        "babel-core": "^6.5.2",
-        "babel-preset-es2015": "^6.5.0",
-        "chai": "^3.5.0",
-        "chai-immutable": "^1.5.3",
-        "mocha": "^2.4.5"
-    },
-    "dependencies": {
-        "immutable": "^3.7.6"
-    },
-    "babel": {
-        "presets": ["es2015"]
-    }
+  "name": "full-stack-redux",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive",
+    "test:watch": "npm run test -- --watch"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "babel-cli": "^6.5.1",
+    "babel-core": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "chai": "^3.5.0",
+    "chai-immutable": "^1.5.3",
+    "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "immutable": "^3.7.6",
+    "redux": "^3.3.1"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  }
 }
